<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wifi Watch</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_history">Detected Connections History</string>
    <string name="title_activity_pop_up">Who\'s this?</string>
    <string name="title_activity_settings">App Settings</string>
    <string name="title_activity_connections_history">Detected Connections History</string>

    <!-- Preferences  -->
    <string name="pref_timeout_to_ping_title">Time to wait for device response</string>
    <string name="pref_timeout_to_ping_summary">The longer the time, the more reliable will be the search (but also slower).\n\nCurrently: %1$s</string>
    <string name="pref_time_between_checking_title">Time to wait between auto-checkings</string>
    <string name="pref_auto_connection_check_title">Auto check connected</string>
    <string name="pref_auto_connection_check_summary">After a search, refresh periodically the connection status of found devices and look for new ones</string>
	<string name="pref_show_notifications_check_title">Show notifications</string>
	<string name="pref_show_notifications_check_summary">Show notification in notification area when new connection detected after a search</string>

    <!-- Image descriptions -->
    <string name="connected_image_desc">Connected</string>
        
    <!-- Messages -->
    <string name="loading_wifi_data">LOADING WIFI DATA&#8230;</string>
    <string name="no_connected_to_wifi">NO CONNECTED TO ANY WIFI</string>
    <string name="start_search">START</string>
    <string name="show_not_connected">Find previously connected devices</string>
    <string name="show_not_connected_explain">(Shows devices not currently but recently connected to your router)</string>
    <string name="scanning_lan">Scanning LAN&#8230;</string>
    <string name="clean_results">Clean results</string>
    <string name="this_is_your_device">This is your device</string>
    <string name="your_device_more_text">You can check it in the Network settings of your device.\n Follow this link to know how:</string>
    <string name="find_your_ip_url">http://www.riverdevs.com/find-your-device-ip</string>
    <string name="this_is_your_gateway">This is your gateway</string>
    <string name="your_gateway_explanation_text">The gateway is the device, part of your network, that connects you with Internet</string>
    <string name="your_gateway_more_text">Usually this is your router</string>
    <string name="this_is_unknown_ip">This is an Unknown IP</string>
    <string name="unknown_explanation_text">This could be somebody you know or somebody you don\'t know.\n\nIf you don\'t recognize the hostname (or it\'s Unknown), you might check the IP on all your home devices (computers, mobiles, consoles&#8230;) to find out which one corresponds with this IP. Follow this link to know how:</string>
    <string name="unknown_explanation_more_text">In case you don\'t manage to find the device to which this IP belongs, you should check your router\'s security configuration</string>
    <string name="configuring_app_title">Configuring app for the first time</string>
    <string name="configuring_app_text">Please wait while the app is configured for the first time</string>
    <string name="delete_all_entries">Delete All</string>
    <string name="no_detected_connections_found">No connections found yet</string>
    <string name="this_is_known_device">This is a known device</string>
    <string name="you_identified_with_name">You identified this device as \"%1$s\"</string>
    <string name="not_search_finished_yet">NO SEARCH FINISHED YET \n\n PLEASE TAP BELOW BUTTON TO START A NEW SEARCH</string>

    <!-- Labels -->
    <string name="close_button">Close</string>
    <string name="connected">connected</string>
    <string name="disconnected">disconnected</string>
    <string name="unknown">Unknown</string>
    <string name="my_name">My name:</string>
    <string name="my_ip">My IP:</string>
    <string name="gateway">Gateway:</string>
    <string name="my_mac">My MAC:</string>
    <string name="search_finished">Search finished\nRemember that you can assign a name by doing a long press on each device name</string>
    <string name="edit_device_name">Edit device name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="check_connection_history">Check connections history</string>
    <string name="remove_all_message">Do you want to delete all results?</string>
    <string name="checking_new_connections">Checking for new connections in background&#8230;</string>
    <string name="connection_detected">Connection detected: </string>
    <string name="connection_checking_stopped">Connection checking service stopped</string>
    
    <!-- Errors -->
    <string name="error_no_connected_title">No Wifi connection</string>
    <string name="error_no_connected_text">Not connected to any Wifi.\nYou must be connected to a Wifi to search.</string>
	<string name="error_no_mac_address_edit_name">A MAC address is needed to assign a name</string>
    
    <string name="preEula">Please accept the following EULA to use this software:</string>
    <string name="updates">1.21: App name change\n</string>
    <string name="eula">
        END USER LICENSE FOR ANDROID "WIFI WATCH" SOFTWARE
		PLEASE READ THIS DOCUMENT CAREFULLY BEFORE USING THIS SOFTWARE. THIS LICENSE PROVIDES IMPORTANT INFORMATION CONCERNING THE SOFTWARE, PROVIDES YOU WITH A LICENSE TO USE THE SOFTWARE AND CONTAINS WARRANTY AND LIABILITY INFORMATION.
		BY USING THE SOFTWARE, YOU ARE ACCEPTING THE SOFTWARE "AS IS" AND AGREEING TO BE BOUND BY THE TERMS OF THIS LICENSE AGREEMENT.
		IN NO ENVENT WILL THE AUTHORS BE HELD LIABLE FOR ANY DAMAGES ARISING FROM THE USE OF THIS SOFTWARE.
		IF YOU DO NOT WISH TO DO SO, DO NOT USE THE SOFTWARE.\n
		\n
		1. Terms of License
		This license allows you to:
		(a) use the Software on a single device; and
		If you wish to use the Software on more than one device, you must license another copy of the
		Software.
		\n\n
		2. Restrictions on Use
		Unless Riverdevs (Owner) has authorized you to distribute the Software, you shall not make or distribute copies of the Software or transfer the Software from one device to another. You shall not decompile, reverse engineer, disassemble, include in other software, or translate the Software, or use the Software for any commercial purposes. You shall not modify, alter, change or otherwise make any modification to the Software or create derivative works based upon the Software. You shall not rent, lease, resell, sub-license, assign, distribute or otherwise transfer the Software or this license. Any attempt to do so shall be void and of no effect.
		\n\n
		3. Ownership
		This license provides you with limited rights to use the Software. The Owner retains all ownership, right, title and interest in, to and of the Software and all copies of it. All rights not specifically granted in this license, including domestic and international copyrights, are reserved by the Owner.
		\n\n
		4. Proprietary Markings
		The Owner\'s logos, product names, manuals, documentation, and other support materials are either patented, copyrighted, trademarked, constitute valuable trade secrets (whether or not any portion of them may be copyrighted or patented) or are otherwise proprietary to the Owner. You shall not remove or obscure the Owner\'s copyright, trade mark or other proprietary notices from any of the materials contained in this package or downloaded together with the Software.
		\n\n
		5. Disclaimer of Warranties and Technical Support
		The Software is provided to you after paying a licence or for free and on an "AS IS" basis, without any technical support or warranty of any kind including, without limitation, any warranty or condition of merchantability, fitness for a particular purpose and non-infringement.
		\n\n
		SOME JURISDICTIONS DO NOT ALLOW THE EXCLUSION OF IMPLIED WARRANTIES, SO THE ABOVE EXCLUSION MAY NOT APPLY TO YOU. YOU MAY ALSO HAVE OTHER LEGAL RIGHTS WHICH VARY FROM JURISDICTION TO JURISDICTION.
    </string>
</resources>