<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/lightest_background"
    tools:context=".PopUpActivity" >

    <LinearLayout
        android:id="@+id/dataLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/container_rectangle"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/selectedIPText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="YOUR IP"
            android:textStyle="bold"
            android:textColor="@color/main_text_color" />

        <TextView
            android:id="@+id/selectedHostnameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="HOSTNAME"
            android:textStyle="bold"
            android:textColor="@color/main_text_color" />
        
        <TextView
            android:id="@+id/selectedMacText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="MACADDRESS"
            android:textStyle="bold"
            android:textColor="@color/main_text_color"/>

        <TextView
            android:id="@+id/selectedManufacturer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="MANUFACTURER"
            android:textStyle="bold"
            android:textColor="@color/main_text_color"/>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/yourIPLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:background="@drawable/lightest_background"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/yourIPText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:textStyle="bold"
            android:textColor="@color/main_dark_text_color"
            android:text="@string/this_is_your_device"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/yourIPMoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/quite_dark_text_color"
            android:gravity="center"
            android:text="@string/your_device_more_text" />

        <TextView
            android:id="@+id/yourIPLinkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center"
            android:text="@string/find_your_ip_url" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gatewayLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lightest_background"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/gatewayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:textStyle="bold"
            android:textColor="@color/main_dark_text_color"
            android:gravity="center"
            android:text="@string/this_is_your_gateway"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/gatewayExplanationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/quite_dark_text_color"
            android:gravity="center"
            android:text="@string/your_gateway_explanation_text" />

        <TextView
            android:id="@+id/gatewayExplanationMoreText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/quite_dark_text_color"
            android:gravity="center"
            android:text="@string/your_gateway_more_text" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/unknownScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lightest_background"
        android:gravity="center"
        android:layout_weight="0.5"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/unknownLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/unknownText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/main_dark_text_color"
                android:text="@string/this_is_unknown_ip"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/unknownExplanationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/quite_dark_text_color"
                android:text="@string/unknown_explanation_text" />

            <TextView
                android:id="@+id/unknownExplanationLinkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/quite_dark_text_color"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/find_your_ip_url" />

            <TextView
                android:id="@+id/unknownExplanationMoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/quite_dark_text_color"
                android:gravity="center"
                android:text="@string/unknown_explanation_more_text" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/closeButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/darkest_background"
        android:textColor="@color/main_text_color"
        android:textStyle="bold"
        android:text="@string/close_button"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

</LinearLayout>