<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <!-- WIFI DATA CONTAINER -->

    <LinearLayout
        android:id="@+id/myConnectionContainerLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:background="@drawable/container_rectangle"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/networkNameTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:textSize="12sp"
            android:drawableTop="@drawable/wifi_router_disconnected"
            android:gravity="center"
            android:textStyle="bold" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:id="@+id/loadingWifiData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center"
            android:orientation="vertical" >

            <ProgressBar
                android:id="@+id/loadingWifiDataProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/loadingWifiDataTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/loading_wifi_data" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/myAddressesDataContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/myHostnameTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/myIPTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/gatewayIPTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/myMACTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/noConnectedContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/noConnectedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_connected_to_wifi" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7348866844562014/5306510085" />

    <!-- SEARCH CONTAINER -->

    <LinearLayout
        android:id="@+id/searchContainerLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/startSearchContainerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/startSearchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_background_clickable"
                android:clickable="true"
                android:drawableTop="@drawable/refresh"
                android:gravity="center"
                android:text="@string/start_search"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/searchNotConnectedCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/show_not_connected" />

            <TextView
                android:id="@+id/explainTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/show_not_connected_explain"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- RESULTS INSIDE THIS LAYOUT -->

        <LinearLayout
            android:id="@+id/searchResultLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <LinearLayout
                android:id="@+id/searchProgressContainerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/searchingTextView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/scanning_lan" />

                    <ProgressBar
                        android:id="@+id/lookUpProgressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/cancelSearchImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:background="@drawable/transparent_background_clickable"
                    android:clickable="true"
                    android:src="@drawable/red_cancel" />
            </LinearLayout>
           
            <TextView
                android:id="@+id/refreshResultsView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_background_clickable"
                android:clickable="true"
                android:drawableLeft="@drawable/clean"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/clean_results"
                android:visibility="gone" />

            <View
                android:id="@+id/busyBar"
			    android:layout_width="fill_parent"
			    android:layout_height="7dp"
			    android:visibility="gone"
			    android:layout_margin="7dp"
			    android:background="@drawable/gradient_bilinear"/>
                        
            <ListView
                android:id="@+id/connectedDeviceList"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>